--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,21 @@
 {
-    "name": "laravel/laravel",
+    "name": "dopecart/prototype",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "Dopecart",
     "keywords": [
         "framework",
-        "laravel"
+        "opencart"
     ],
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
+        "goldspecdigital/laravel-eloquent-uuid": "^7.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "sentry/sentry-laravel": "^1.8"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
