fix: use admin theme resources path

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/themes/admin/js/app.js": "/themes/admin/js/app.js",
+    "/themes/admin/css/app.css": "/themes/admin/css/app.css"
 }
