--- a/.editorconfig
+++ b/.editorconfig
@@ -14,5 +14,8 @@ trim_trailing_whitespace = false
 [*.{yml,yaml}]
 indent_size = 2
 
-[*.js]
+[*.{js,json,vue}]
+indent_size = 2
+
+[*.{css,scss,sass}]
 indent_size = 2
