--- a/composer.json
+++ b/composer.json
@@ -1,69 +1,69 @@
 {
-    "name": "dopecart/prototype",
-    "type": "project",
-    "description": "Dopecart",
-    "keywords": [
-        "framework",
-        "opencart"
-    ],
-    "license": "MIT",
-    "require": {
-        "php": "^7.2.5",
-        "anlutro/l4-settings": "^0.11.2",
-        "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^2.0",
-        "goldspecdigital/laravel-eloquent-uuid": "^7.0",
-        "guzzlehttp/guzzle": "^6.3",
-        "igaster/laravel-theme": "^2.0",
-        "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
-        "sentry/sentry-laravel": "^1.8",
-        "spatie/laravel-permission": "^3.13"
-    },
-    "require-dev": {
-        "facade/ignition": "^2.0",
-        "fzaninotto/faker": "^1.9.1",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true
-    },
-    "extra": {
-        "laravel": {
-            "dont-discover": []
-        }
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "scripts": {
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
-        ],
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
-        ]
+  "name": "dopecart/prototype",
+  "type": "project",
+  "description": "Dopecart prototype",
+  "keywords": [
+    "framework",
+    "opencart"
+  ],
+  "license": "MIT",
+  "require": {
+    "php": "^7.2.5",
+    "anlutro/l4-settings": "^0.11.2",
+    "fideloper/proxy": "^4.2",
+    "fruitcake/laravel-cors": "^2.0",
+    "goldspecdigital/laravel-eloquent-uuid": "^7.0",
+    "guzzlehttp/guzzle": "^6.3",
+    "igaster/laravel-theme": "^2.0",
+    "laravel/framework": "^7.0",
+    "laravel/tinker": "^2.0",
+    "laravel/ui": "^2.0",
+    "sentry/sentry-laravel": "^1.8",
+    "spatie/laravel-permission": "^3.13"
+  },
+  "require-dev": {
+    "facade/ignition": "^2.0",
+    "fzaninotto/faker": "^1.9.1",
+    "mockery/mockery": "^1.3.1",
+    "nunomaduro/collision": "^4.1",
+    "phpunit/phpunit": "^8.5"
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "sort-packages": true
+  },
+  "extra": {
+    "laravel": {
+      "dont-discover": []
     }
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/"
+    },
+    "classmap": [
+      "database/seeds",
+      "database/factories"
+    ]
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "scripts": {
+    "post-autoload-dump": [
+      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+      "@php artisan package:discover --ansi"
+    ],
+    "post-root-package-install": [
+      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+    ],
+    "post-create-project-cmd": [
+      "@php artisan key:generate --ansi"
+    ]
+  }
 }
